--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Events\CollisionEvent.hpp" />
     <ClInclude Include="Events\GameStartEvent.hpp" />
     <ClInclude Include="Events\KeyboardEvent.hpp" />
+    <ClInclude Include="Events\LoseEvent.hpp" />
     <ClInclude Include="Events\MouseEvents.h" />
     <ClInclude Include="Components\ParticleComponent.hpp" />
     <ClInclude Include="Events\PauseToggleEvent.hpp" />
