--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -165,7 +165,9 @@
     <ClInclude Include="Events\MouseEvents.h" />
     <ClInclude Include="Components\ParticleComponent.hpp" />
     <ClInclude Include="Events\PauseToggleEvent.hpp" />
+    <ClInclude Include="Events\PlayerBasedLossEvent.hpp" />
     <ClInclude Include="Events\QuitRequestEvent.hpp" />
+    <ClInclude Include="Events\ReturnToMenuEvent.hpp" />
     <ClInclude Include="Events\SwitchEvent.hpp" />
     <ClInclude Include="Events\UIChangeEvent.hpp" />
     <ClInclude Include="Events\UISelectEvent.hpp" />
