--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -114,6 +114,7 @@
     <ClInclude Include="Events\LoseEvent.hpp" />
     <ClInclude Include="Events\ReturnToMenuEvent.hpp" />
     <ClInclude Include="Events\PlayerBasedLossEvent.hpp" />
+    <ClInclude Include="Events\MenuShowCreditsEvent.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Components\SoundEmitterComponent.tpp" />
